Version 2.02.99 - 
===================================
  Add _lv_remove_segs_using_this_lv() for removal of dependent lvs.
  Improve activation code for better support of stacked devices.
  Add _add_layer_target_to_dtree() for adding linear layer into dtree.
  Extend _cached_info() to accept layer string.
  Allow identical table reload for RAID to restore transiently failed PVs.
  vgimport '--force' now allows users to import VGs with missing PVs.
  Fix PV alignment to incorporate alignment offset if the PV has zero MDAs.
  Allow remove/replace of RAID sub-LVs that are composed of error targets.
  Make 'vgreduce --removemissing' able to handle RAID LVs with missing PVs.
  Rename lvm.conf setting 'mirror_region_size' to 'raid_region_size'.
  Fix pvs -o pv_free reporting for PVs with zero PE count.
  Fix missing cleanup of flags when the LV is detached from pool.
  Fix check for some forbidden discards conversion of thin pools.
  Add pool_is_active() to check for any pool related active LV.
  Report blank field if the LV doesn't have an origin instead of 0.
  Do not take a free lv name argument for lvconvert --thinpool option.
  Avoid flushing thin pool when quering for transaction_id.
  Add internal function lv_layer() to obtain layer name for LV.
  Report partial and in-sync RAID attribute based on kernel status
  Fix blkdeactivate to handle nested mountpoints and mangled mount paths.
  Set locales with LC_ALL instead of lower priority LANG variable.
  Fix a crash-inducing race condition in lvmetad.
  Add log/debug_classes to lvm.conf to control debug log messages.
  Synchronize with udev in pvscan --cache and fix dangling udev_sync cookies.
  Fix autoactivation to not autoactivate VG/LV on each change of the PVs used.
  Limit RAID device replacement to repair only if LV is not in-sync.
  Disallow RAID device replacement or repair on inactive LVs.
  Fix possible race while removing metadata from lvmetad.